--- a/src/App.css
+++ b/src/App.css
@@ -8,3 +8,14 @@ body, html, #root, .app {
   width: 100%;
   height: 100%;
 }
+
+.hue-picker {
+  margin-top: 10px;
+}
+
+.weather-block {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
